Fix the spacing on the left border when not rectangular screen and portrait orientation (Fix #21)

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -120,45 +120,6 @@ body {
     }
 }
 
-/* Landscape */
-@media only screen and (orientation : landscape)
-{
-    #container {
-        min-height:100%;
-        position:relative;
-        overflow: hidden;
-    }
-    #dataview {
-        position:absolute;
-        width:50%;
-        right:50%;
-        top: 0;
-        height: 50%;
-    }
-    #mapview {
-        position:absolute;
-        top: 0;
-        width:50%;
-        right:0;
-        height:100%;
-    }
-    #hudview {
-        position:absolute;
-        top:50%;
-        right:50%;
-        width:50%;
-        height:50%;
-    }
-    @supports(bottom: max(0px)) {
-        #dataview {
-            width: calc(50% - env(safe-area-inset-left) - 1em);
-        }
-        #mapview {
-            height: calc(100% - max(0px, env(safe-area-inset-bottom)));
-        }
-    }
-}
-
 /* Font Stuff */
 @font-face {
   font-family: 'Ubuntu';
@@ -183,7 +144,7 @@ body {
     padding-top: 5vmin;
     transition: 0.5s;
   }
-  
+
   /* The sidebar links */
   .sidebar a,
   #brokerSettings a
@@ -307,4 +268,54 @@ body {
         display: inherit;
     }
     
+}
+
+
+
+
+
+
+/* Landscape */
+@media only screen and (orientation : landscape)
+{
+    #container {
+        min-height:100%;
+        position:relative;
+        overflow: hidden;
+    }
+    #dataview {
+        position:absolute;
+        width:50%;
+        right:50%;
+        top: 0;
+        height: 50%;
+    }
+    #mapview {
+        position:absolute;
+        top: 0;
+        width:50%;
+        right:0;
+        height:100%;
+    }
+    #hudview {
+        position:absolute;
+        top:50%;
+        right:50%;
+        width:50%;
+        height:50%;
+    }
+    @supports(bottom: max(0px)) {
+        #dataview {
+            width: calc(50% - env(safe-area-inset-left) - 1em);
+        }
+        #mapview {
+            height: calc(100% - max(0px, env(safe-area-inset-bottom)));
+        }
+        .sidebar {
+            left: max(0, env(safe-area-inset-left));
+        }
+        #brokerSettings {
+            left: max(0, env(safe-area-inset-left));
+        }
+    }
 }
